RESOLVED FIXED121984
[Qt] Fix build after r156487
https://bugs.webkit.org/show_bug.cgi?id=121984
Summary [Qt] Fix build after r156487
Julien Brianceau
Reported 2013-09-26 14:35:48 PDT
Fix Qt build after r156487 (http://trac.webkit.org/changeset/156487) Seen with our sh4 build bot (http://build.webkit.org/builders/Qt%20Linux%20SH4%20Release/builds/30703): /local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/Source/WebCore/bridge/qt/qt_runtime.cpp: In member function 'OpaqueJSValue* JSC::Bindings::QtRuntimeMethod::jsObjectRef(JSContextRef, const OpaqueJSValue**)': /local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/Source/WebCore/bridge/qt/qt_runtime.cpp:1304:18: error: 'PassWeak' was not declared in this scope /local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/Source/WebCore/bridge/qt/qt_runtime.cpp:1304:35: error: expected primary-expression before '>' token make[2]: *** [.obj/release-shared/bridge/qt/qt_runtime.o] Error 1 make[2]: *** Waiting for unfinished jobs....
Attachments
Use Weak instead of PassWeak in WebCore/bridge/qt/qt_runtime.cpp (1.17 KB, patch)
2013-09-26 14:44 PDT, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-09-26 14:44:15 PDT
Created attachment 212751 [details] Use Weak instead of PassWeak in WebCore/bridge/qt/qt_runtime.cpp
WebKit Commit Bot
Comment 2 2013-09-26 15:17:55 PDT
Comment on attachment 212751 [details] Use Weak instead of PassWeak in WebCore/bridge/qt/qt_runtime.cpp Clearing flags on attachment: 212751 Committed r156503: <http://trac.webkit.org/changeset/156503>
WebKit Commit Bot
Comment 3 2013-09-26 15:17:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.