[Qt] Fix build after r156487. https://bugs.webkit.org/show_bug.cgi?id=121984

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-09-26
Reviewed by Anders Carlsson.

* bridge/qt/qt_runtime.cpp:
(JSC::Bindings::QtRuntimeMethod::jsObjectRef):

Canonical link: https://commits.webkit.org/140004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156503 268f45cc-cd09-0410-ab3c-d52691b4dbfc